// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MetaPageList should match snapshot (user, default) 1`] = `
<div
  className="c-page-list"
>
  <h3>
    Meta
  </h3>
  <hr />
  <div
    className="c-page-list__body"
  >
    <p>
      No Data
    </p>
  </div>
</div>
`;

exports[`MetaPageList should match snapshot (user, list) 1`] = `
<div
  className="c-page-list"
>
  <h3>
    Meta
  </h3>
  <hr />
  <div
    className="c-page-list__body"
  >
    <p
      className="c-page-list__item"
      key="0-347"
    >
      <Link
        to="/users/page/id-a"
      >
        Anonymous
      </Link>
    </p>
  </div>
</div>
`;

exports[`MetaPageList should match snapshot (user, list, name) 1`] = `
<div
  className="c-page-list"
>
  <h3>
    Meta
  </h3>
  <hr />
  <div
    className="c-page-list__body"
  >
    <p
      className="c-page-list__item"
      key="0-347"
    >
      <Link
        to="/users/page/id-a"
      >
        User A
      </Link>
    </p>
  </div>
</div>
`;

exports[`MetaPageList should match snapshot (venue, default) 1`] = `
<div
  className="c-page-list"
>
  <h3>
    Meta
  </h3>
  <hr />
  <div
    className="c-page-list__body"
  >
    <p>
      No Data
    </p>
  </div>
</div>
`;

exports[`MetaPageList should match snapshot (venue, list) 1`] = `
<div
  className="c-page-list"
>
  <h3>
    Meta
  </h3>
  <hr />
  <div
    className="c-page-list__body"
  >
    <p
      className="c-page-list__item"
      key="0-347"
    >
      <Link
        to="/venues/page/id-a"
      >
        Undefined
      </Link>
    </p>
  </div>
</div>
`;

exports[`MetaPageList should match snapshot (venue, list, name) 1`] = `
<div
  className="c-page-list"
>
  <h3>
    Meta
  </h3>
  <hr />
  <div
    className="c-page-list__body"
  >
    <p
      className="c-page-list__item"
      key="0-347"
    >
      <Link
        to="/venues/page/id-a"
      >
        Venue A
      </Link>
    </p>
  </div>
</div>
`;
